# CamAndMotive

./: .gitignore  CMakeLists.txt  README.md  SampleClient_modified.cpp  main.cpp  motiveExport.cpp  rascunhos.cpp
NatNetSDK/Samples/SampleClient/: SampleClient.cpp
